--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,18 +14,36 @@ jobs:
       - name: Test code
         run: npm run test
   build:
+    needs: test
     runs-on: Ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }}
     steps:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Install Dependencies
         run: npm ci
-      - name: Test code
-        run: npm run test
+      - name: Build website
+        run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type f execdir echo 'script-file = {}' >> $GITHUB_OUTPUT ';'
+      - name: uoload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: dist
+
+
   deploy:
     needs: build
     runs-on: Ubuntu-test
     steps:
+      - name: Get build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+
       - name: Deploy
         run: echo "Deploying..."
     
