--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm run build
       - name: Publish JS filename
         id: publish
-        run: find dist/assets/*.js -type f execdir echo 'script-file = {}' >> $GITHUB_OUTPUT ';'
+        run: find dist/assets/*.js -type f -execdir echo 'script-file = {}' >> $GITHUB_OUTPUT ';'
       - name: uoload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -43,7 +43,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist-files
-
+      - name: output contents
+        run: ls
+      - name: Output filename
+        run: echo "${{needs.build.outputs.script-file}}"
       - name: Deploy
         run: echo "Deploying..."
     
