--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,7 +38,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: Ubuntu-test
+    runs-on: Ubuntu-latest
     steps:
       - name: Get build Artifacts
         uses: actions/download-artifact@v3
