--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -34,9 +34,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
-          path: dist
-
-
+          path: |
+            dist
+            package.json
   deploy:
     needs: build
     runs-on: Ubuntu-latest
